--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ document.getElementById("blockChoose").value = mylist.options[mylist.selectedInd
   
 <body>  
 <form>  
-<b> Select you favourite tutorial site using dropdown list </b>  
+<b> Block picker </b>  
 <select id = "myList" onchange = "blockChoose()" >  
 <option>---Add Something---</option>  
 <option> a </option>  
@@ -19,8 +19,8 @@ document.getElementById("blockChoose").value = mylist.options[mylist.selectedInd
 <option> c </option>  
 <option> d </option>  
 </select>  
-<p> Your selected tutorial site is:   
-id = "blockChoose" </p>  
+<p> you chose:   
+<input type = "text" id = "blockChoose" size = "20" </p>  
 </form>  
 </body>  
 </html>
