--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ document.getElementById("blockChoose").value = mylist.options[mylist.selectedInd
 <option> d </option>  
 </select>  
 <p> you chose:   
-<input type = "text" id = "blockChoose" size = "20" </p>  
+<input type = "text" id = "blockChoose()" size = "20" </p>  
 </form>  
 </body>  
 </html>
