--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script>  
 function addSomething() {  
 var mylist = document.getElementById("myList");  
-document.getElementById("add").value = mylist.options[mylist.selectedIndex].text;  
+document.getElementById("add()").value = mylist.options[mylist.selectedIndex].text;  
 }  
 </script>  
   
