--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>  
 <head>  
-<title>Test</title>  
+<title>Test</title> 
+<link rel="shortcut icon" href="favicon
 </head>  
 <script>  
 function addSomething() {  
