--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>  
 <head>  
 <title>Test</title> 
-<link rel="shortcut icon" href="favicon
+<link rel="images/413B25C9-580C-4E42-92E9-28EC958AD6BE.jpeg" href="favicon
 </head>  
 <script>  
 function addSomething() {  
